# tenant-flow

./: LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
docs/adr/: 001-multitenancy-strategy.md  002-event-processing-model.md
migrations/: 001_create_tenants.sql  002_create_events.sql  003_create_event_processing_attempts.sql
scripts/: init-db.sh
src/tenant_flow/: config.py  main.py
src/tenant_flow/db/: engine.py  session.py
src/tenant_flow/models/: attempt.py  event.py  tenant.py
